fix: demo layout on mobile

--- a/samples/css/index.css
+++ b/samples/css/index.css
@@ -25,7 +25,7 @@ body {
   background-color: #2b2b2b;
   color: white;
   min-height: 100dvh;
-  padding: 2rem 1rem;
+  padding: 1rem;
   font-family: OpenSans-Regular;
   display: flex;
   flex-direction: column;
@@ -35,6 +35,7 @@ body {
 .col2 {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 /* Logo styles */
@@ -54,13 +55,13 @@ body {
 /* Header styles */
 .header {
   text-align: center;
-  margin: 1rem 0;
+  margin: 0 0 0.5rem;
 }
 
 .title {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   font-family: Oswald-Regular;
 }
 
@@ -69,6 +70,7 @@ body {
   max-width: 30rem;
   margin: 0 auto;
   font-size: 14px;
+  margin: 0.25rem 0 1rem;
 }
 
 .description-link {
@@ -76,16 +78,10 @@ body {
 }
 
 /* Main content styles */
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
-}
 
 .scanner-area {
   border-radius: 0.5rem;
-  padding: 1rem;
+  padding: 0.5rem 1rem 1rem;
   text-align: center;
   background-color: #323234;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -94,6 +90,47 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
+  position: relative;
+}
+
+.scanner-area-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.scanner-area-header .share-button {
+  background-color: #1f1f1f;
+  color: white;
+  border: none;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.375rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.scanner-area-header .share-button div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.scanner-area-header .share-button:hover {
+  background-color: #374151;
+}
+
+.scanner-area-header .share-button div svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.scanner-area-header .share-button.disabled {
+  opacity: 0.4;
+  pointer-events: none;
+}
+
+.scanner-area-header .share-button.disabled:hover {
+  background-color: #1f1f1f;
 }
 
 .preview-area {
@@ -103,9 +140,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin: 0.5rem 0 1rem;
   overflow: hidden;
-  height: calc(100dvh - 400px);
+  height: calc(100dvh - 320px);
 }
 
 .placeholder-text {
@@ -137,6 +174,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 1rem;
+  position: relative;
 }
 
 .scan-button {
@@ -149,46 +187,21 @@ body {
   cursor: pointer;
   transition: background-color 0.2s;
   user-select: none;
+  font-size: 16px;
 }
 
 .scan-button:hover {
   background-color: #ea580c;
 }
 
-.share-button {
-  background-color: #4b5563;
-  color: white;
-  border: none;
-  padding: 0.5rem 1rem;
-  border-radius: 0.375rem;
-  font-weight: 500;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  display: none;
-}
-
-.share-button div {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.share-button:hover {
-  background-color: #374151;
-}
-
-.share-button div svg {
-  width: 1rem;
-  height: 1rem;
-}
-
-/* Footer styles */
-.footer {
+.powered-by-msg {
   text-align: center;
   color: white;
-  margin-top: 2rem;
   font-family: Oswald-Light;
   user-select: none;
+  position: absolute;
+  top: -4rem;
+  font-size: 14px;
 }
 
 /* Button states */
@@ -203,10 +216,19 @@ body {
 
 @media screen and (max-width: 900px) {
   .col1 {
-    flex: 0.5;
+    flex: 0.25;
   }
   .col2 {
     flex: 1;
+  }
+
+  .title {
+    margin-bottom: 0;
+  }
+
+  .description {
+    display: none;
+    font-size: 12px;
   }
 
   .placeholder-text .mobile-qr,
@@ -221,6 +243,10 @@ body {
 
   .placeholder-text .placeholder-text-2 {
     color: white;
+  }
+
+  .preview-area {
+    height: calc(100dvh - 230px);
   }
 }
 
@@ -238,6 +264,6 @@ body {
   }
 
   .preview-area {
-    height: calc(100dvh - 200px);
+    height: calc(100dvh - 150px);
   }
 }
